--- a/TTH/assets/style.css
+++ b/TTH/assets/style.css
@@ -1,5 +1,6 @@
 .titleWrapper {
     text-align: center;
+    margin-bottom: 100px;
   }
   
 .title {
@@ -8,10 +9,10 @@
   color:rgb(42, 74, 177);
 }
 
-html, body {
+/* html, body {
   height: 100%;
   margin: 0;
-}
+} */
 
 body {
   display: flex;
@@ -19,10 +20,11 @@ body {
 }
 
 #chart1, #chart2 {
-  flex: 1; 
-  max-width: 100%; 
+  padding-top: 20px;
+  max-width: 100%;
+  text-align: center
 }
 
-.titleWrapper {
+/* .titleWrapper {
   flex-shrink: 0; 
-}
+} */
