--- a/src/Hieu/style.css
+++ b/src/Hieu/style.css
@@ -1,6 +1,6 @@
-/* .titleWrapper {
+.titleWrapper {
   text-align: center;
-} */
+}
 
 .title {
 font-size: 20px;
@@ -21,6 +21,8 @@ flex-direction: column;
 #chart1, #chart2 {
 flex: 1; 
 max-width: 100%; 
+text-align: center;
+padding-top: 50px;
 }
 
 .titleWrapper {
